--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "portifolio-react",
-  "homepage": "https://brendhaed.github.io/portfolio-brendha.io",
+  "homepage": "https://brendhaed.github.io/portifolio-brendha.io/",
   "private": false,
   "version": "0.0.0",
   "type": "module",
